# isam-hackathon-2025

./: README.md
custom_robotiq_description/: CMakeLists.txt  package.xml
custom_robotiq_description/urdf/: custom_2f_85.ros2_control.xacro  custom_robotiq_2f_85_macro.urdf.xacro
custom_ur_description/: CMakeLists.txt  package.xml
custom_ur_description/config/: initial_positions.yaml
custom_ur_description/urdf/: custom_ur.urdf.xacro
custom_ur_moveit_config/: CMakeLists.txt  package.xml
custom_ur_moveit_config/config/: custom_controllers.yaml
custom_ur_moveit_config/launch/: custom_ur_moveit.launch.py
custom_ur_moveit_config/srdf/: custom_ur.srdf.xacro  custom_ur_macro.srdf.xacro
isam_hackathon_2025_main/: CMakeLists.txt  package.xml
isam_hackathon_2025_main/config/: custom_ur_controllers.yaml
isam_hackathon_2025_main/launch/: custom_ur_sim_control.launch.py  custom_ur_sim_moveit.launch.py
isam_hackathon_2025_main/models/astronaut/: model.config  model.sdf
isam_hackathon_2025_main/models/astronaut/meshes/: LICENSE.txt  README.txt
isam_hackathon_2025_main/models/brick/: model.config  model.sdf
isam_hackathon_2025_main/models/brick/meshes/: 00_InterlockingBrick_Rev.00.STL
isam_hackathon_2025_main/worlds/: basic_world.sdf
